--- a/media/css/main.css
+++ b/media/css/main.css
@@ -105,63 +105,54 @@ h2 a {
 /* line 77, ../scss/main.scss */
 ul.pageNav {
   display: inline-block;
-  background: #3d628c;
-  color: #d5d5d5;
-  -webkit-border-radius: 0.25em 0.25em 0 0;
-  -moz-border-radius: 0.25em 0.25em 0 0;
-  -ms-border-radius: 0.25em 0.25em 0 0;
-  -o-border-radius: 0.25em 0.25em 0 0;
-  border-radius: 0.25em 0.25em 0 0;
-  border: 1px solid #3d628c;
-  border-bottom: none;
+  color: #7d7d7d;
   list-style: none;
-  margin: 0;
+  margin: 0 0 1em 0;
   padding: 0;
 }
-/* line 88, ../scss/main.scss */
+/* line 84, ../scss/main.scss */
 ul.pageNav.right {
   float: right;
 }
-/* line 92, ../scss/main.scss */
+/* line 88, ../scss/main.scss */
 ul.pageNav li {
   display: inline-block;
+  padding: 0 0.5em 0 0;
+  font-size: 0.8em;
 }
-/* line 95, ../scss/main.scss */
+/* line 93, ../scss/main.scss */
 ul.pageNav li a {
-  display: inline-block;
-  background: #fff;
+  color: #7d7d7d;
 }
-/* line 99, ../scss/main.scss */
+/* line 97, ../scss/main.scss */
 ul.pageNav li a:hover {
-  background: #e5e5e5;
+  background: url(../images/noiseblue.png) repeat left center #25bfff;
   text-decoration: none;
+  color: #fff;
 }
-/* line 105, ../scss/main.scss */
+/* line 104, ../scss/main.scss */
 ul.pageNav li a, ul.pageNav li span {
-  padding: 0.25em 0.5em;
+  display: inline-block;
+  padding: 0.5em 0.75em;
+  -webkit-border-radius: 0.5em;
+  -moz-border-radius: 0.5em;
+  -ms-border-radius: 0.5em;
+  -o-border-radius: 0.5em;
+  border-radius: 0.5em;
 }
-/* line 109, ../scss/main.scss */
+/* line 110, ../scss/main.scss */
 ul.pageNav li.firstPage a:before {
   content: '<< ';
 }
-/* line 112, ../scss/main.scss */
+/* line 113, ../scss/main.scss */
 ul.pageNav li.lastPage a:after {
   content: ' >>';
 }
-/* line 116, ../scss/main.scss */
-ul.pageNav li.curPage a {
-  background: #3d628c;
-  color: #d5d5d5;
+/* line 117, ../scss/main.scss */
+ul.pageNav li.curPage span {
+  background: url(../images/noiseGreyDark.png) repeat left center #e0e0e0;
 }
-/* line 121, ../scss/main.scss */
-ul.pageNav li:last-child a {
-  -webkit-border-radius: 0 0.125em 0 0;
-  -moz-border-radius: 0 0.125em 0 0;
-  -ms-border-radius: 0 0.125em 0 0;
-  -o-border-radius: 0 0.125em 0 0;
-  border-radius: 0 0.125em 0 0;
-}
-/* line 126, ../scss/main.scss */
+/* line 122, ../scss/main.scss */
 ul.pageNav.bottom {
   -webkit-border-radius: 0 0 0.25em 0.25em;
   -moz-border-radius: 0 0 0.25em 0.25em;
@@ -171,7 +162,7 @@ ul.pageNav.bottom {
   border: 1px solid #3d628c;
   border-top: none;
 }
-/* line 131, ../scss/main.scss */
+/* line 127, ../scss/main.scss */
 ul.pageNav.bottom li:last-child a {
   -webkit-border-radius: 0 0 0.125em 0;
   -moz-border-radius: 0 0 0.125em 0;
@@ -180,7 +171,7 @@ ul.pageNav.bottom li:last-child a {
   border-radius: 0 0 0.125em 0;
 }
 
-/* line 140, ../scss/main.scss */
+/* line 136, ../scss/main.scss */
 .tag-vip:before {
   content: url("../images/tags/vip.png") " ";
   display: inline-block;
@@ -189,7 +180,7 @@ ul.pageNav.bottom li:last-child a {
   height: 16px;
 }
 
-/* line 140, ../scss/main.scss */
+/* line 136, ../scss/main.scss */
 .tag-mod:before {
   content: url("../images/tags/mod.png") " ";
   display: inline-block;
@@ -198,7 +189,7 @@ ul.pageNav.bottom li:last-child a {
   height: 16px;
 }
 
-/* line 140, ../scss/main.scss */
+/* line 136, ../scss/main.scss */
 .tag-admin:before {
   content: url("../images/tags/admin.png") " ";
   display: inline-block;
@@ -207,7 +198,7 @@ ul.pageNav.bottom li:last-child a {
   height: 16px;
 }
 
-/* line 140, ../scss/main.scss */
+/* line 136, ../scss/main.scss */
 .tag-dev:before {
   content: url("../images/tags/dev.png") " ";
   display: inline-block;
@@ -216,7 +207,7 @@ ul.pageNav.bottom li:last-child a {
   height: 16px;
 }
 
-/* line 140, ../scss/main.scss */
+/* line 136, ../scss/main.scss */
 .tag-super:before {
   content: url("../images/tags/super.png") " ";
   display: inline-block;
@@ -225,7 +216,7 @@ ul.pageNav.bottom li:last-child a {
   height: 16px;
 }
 
-/* line 140, ../scss/main.scss */
+/* line 136, ../scss/main.scss */
 .tag-owner:before {
   content: url("../images/tags/owner.png") " ";
   display: inline-block;
@@ -234,7 +225,36 @@ ul.pageNav.bottom li:last-child a {
   height: 16px;
 }
 
+/* line 146, ../scss/main.scss */
+.breadcrumbs {
+  margin: 0;
+  padding: 0;
+  display: inline-block;
+}
 /* line 151, ../scss/main.scss */
+.breadcrumbs li {
+  display: inline-block;
+  list-style: none;
+  padding: 0 1em 0 0;
+}
+/* line 156, ../scss/main.scss */
+.breadcrumbs li a {
+  color: #25bfff;
+  display: inline-block;
+}
+/* line 160, ../scss/main.scss */
+.breadcrumbs li ~ li:before {
+  content: '>';
+  color: #555;
+  display: inline-block;
+  padding: 0 0.5em 0 0;
+  font-family: 'Arvil Sans', Arial;
+  font-size: 2em;
+  line-height: 0;
+  vertical-align: middle;
+}
+
+/* line 174, ../scss/main.scss */
 #chatbox .chats {
   font-size: 0.75em;
   border: 1px solid #d8d8d8;
@@ -250,21 +270,21 @@ ul.pageNav.bottom li:last-child a {
   overflow-x: hidden;
   background: #fff;
 }
-/* line 164, ../scss/main.scss */
+/* line 187, ../scss/main.scss */
 #chatbox .chat a.userLink:before {
   line-height: 1.0;
   vertical-align: bottom;
   max-height: 15px;
 }
-/* line 171, ../scss/main.scss */
+/* line 194, ../scss/main.scss */
 #chatbox .chat-date {
   font-style: italic;
 }
-/* line 175, ../scss/main.scss */
+/* line 198, ../scss/main.scss */
 #chatbox .chat ~ .chat-date {
   margin-top: 1em;
 }
-/* line 179, ../scss/main.scss */
+/* line 202, ../scss/main.scss */
 #chatbox input {
   width: 100%;
   border: 1px solid #d8d8d8;
@@ -279,7 +299,7 @@ ul.pageNav.bottom li:last-child a {
   border-radius: 0 0 0.5em 0.5em;
 }
 
-/* line 189, ../scss/main.scss */
+/* line 212, ../scss/main.scss */
 .dimensions {
   position: absolute;
   display: inline-block;
@@ -289,22 +309,22 @@ ul.pageNav.bottom li:last-child a {
   padding: 0.5em;
   font-size: 0.8em;
 }
-/* line 198, ../scss/main.scss */
+/* line 221, ../scss/main.scss */
 .dimensions:hover {
   color: #fff;
 }
 
-/* line 203, ../scss/main.scss */
+/* line 226, ../scss/main.scss */
 .tinyImage {
   border: 2px solid #a54;
   cursor: pointer;
 }
-/* line 207, ../scss/main.scss */
+/* line 230, ../scss/main.scss */
 .tinyImage.expanded {
   max-width: none;
 }
 
-/* line 212, ../scss/main.scss */
+/* line 235, ../scss/main.scss */
 .missing42 {
   width: 42px;
   height: 42px;
@@ -312,7 +332,7 @@ ul.pageNav.bottom li:last-child a {
   background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACoAAAAqAQMAAAD/DVsYAAAABlBMVEX4APgAAAAfdBzzAAAAJUlEQVR4Xs3OoQEAAARFwScZy+p/LAlDEKSrB5HW2tLyghselgat1Xgl/EfvxwAAAABJRU5ErkJggg==") no-repeat;
 }
 
-/* line 219, ../scss/main.scss */
+/* line 242, ../scss/main.scss */
 .missing52 {
   width: 42px;
   height: 42px;
@@ -320,22 +340,22 @@ ul.pageNav.bottom li:last-child a {
   background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADQAAAA0AQMAAAD/tomoAAAABlBMVEX4APgAAAAfdBzzAAAAKUlEQVR4Xt3PQQkAAAjAwIEBjGR1IxlAUEvoQxjce6DlUrHmZAlXfvtpTQiymQ2xdWAAAAAASUVORK5CYII=") no-repeat;
 }
 
-/* line 228, ../scss/main.scss */
+/* line 251, ../scss/main.scss */
 .modButton.active {
   background: url(../images/noiseblue.png) repeat left center #25bfff;
   z-index: 1000;
 }
 
-/* line 235, ../scss/main.scss */
+/* line 258, ../scss/main.scss */
 .modDropdown {
   display: inline-block;
   position: relative;
 }
-/* line 239, ../scss/main.scss */
+/* line 262, ../scss/main.scss */
 .modDropdown:hover {
   background: url(../images/noiseBlackLight.png) repeat left center #636363;
 }
-/* line 260, ../scss/main.scss */
+/* line 283, ../scss/main.scss */
 .modDropdown ul {
   display: none;
   position: absolute;
@@ -348,7 +368,7 @@ ul.pageNav.bottom li:last-child a {
   text-align: left;
   background: #222;
 }
-/* line 274, ../scss/main.scss */
+/* line 297, ../scss/main.scss */
 .modDropdown ul li a {
   color: #fff;
   display: block;
@@ -357,12 +377,12 @@ ul.pageNav.bottom li:last-child a {
   background: url(../images/noiseblack.png) repeat left center #3b3b3b;
   line-height: 32px;
 }
-/* line 282, ../scss/main.scss */
+/* line 305, ../scss/main.scss */
 .modDropdown ul li a:hover {
   background: url(../images/noiseblue.png) repeat left center #25bfff;
   text-decoration: none;
 }
-/* line 288, ../scss/main.scss */
+/* line 311, ../scss/main.scss */
 .modDropdown ul li.userActions {
   padding: 0 16px;
   line-height: 32px;
@@ -370,19 +390,19 @@ ul.pageNav.bottom li:last-child a {
   font-weight: bold;
   white-space: nowrap;
 }
-/* line 299, ../scss/main.scss */
+/* line 321, ../scss/main.scss */
 .modDropdown ul.mod-thread a {
   padding: 0 0.5em 0 0;
 }
 
 @-moz-keyframes spin {
-  /* line 308, ../scss/main.scss */
+  /* line 330, ../scss/main.scss */
   from {
     -moz-transform: rotate(0deg);
     transform: rotate(0deg);
   }
 
-  /* line 311, ../scss/main.scss */
+  /* line 333, ../scss/main.scss */
   to {
     -moz-transform: rotate(360deg);
     transform: rotate(360deg);
@@ -390,13 +410,13 @@ ul.pageNav.bottom li:last-child a {
 }
 
 @-webkit-keyframes spin {
-  /* line 308, ../scss/main.scss */
+  /* line 330, ../scss/main.scss */
   from {
     -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
   }
 
-  /* line 311, ../scss/main.scss */
+  /* line 333, ../scss/main.scss */
   to {
     -webkit-transform: rotate(360deg);
     transform: rotate(360deg);
@@ -404,13 +424,13 @@ ul.pageNav.bottom li:last-child a {
 }
 
 @-o-keyframes spin {
-  /* line 308, ../scss/main.scss */
+  /* line 330, ../scss/main.scss */
   from {
     -o-transform: rotate(0deg);
     transform: rotate(0deg);
   }
 
-  /* line 311, ../scss/main.scss */
+  /* line 333, ../scss/main.scss */
   to {
     -o-transform: rotate(360deg);
     transform: rotate(360deg);
@@ -418,13 +438,13 @@ ul.pageNav.bottom li:last-child a {
 }
 
 @-ms-keyframes spin {
-  /* line 308, ../scss/main.scss */
+  /* line 330, ../scss/main.scss */
   from {
     -ms-transform: rotate(0deg);
     transform: rotate(0deg);
   }
 
-  /* line 311, ../scss/main.scss */
+  /* line 333, ../scss/main.scss */
   to {
     -ms-transform: rotate(360deg);
     transform: rotate(360deg);
@@ -432,18 +452,18 @@ ul.pageNav.bottom li:last-child a {
 }
 
 @keyframes spin {
-  /* line 308, ../scss/main.scss */
+  /* line 330, ../scss/main.scss */
   from {
     transform: rotate(0deg);
   }
 
-  /* line 311, ../scss/main.scss */
+  /* line 333, ../scss/main.scss */
   to {
     transform: rotate(360deg);
   }
 }
 
-/* line 316, ../scss/main.scss */
+/* line 338, ../scss/main.scss */
 .popupContainer {
   text-align: center;
   position: fixed;
@@ -456,7 +476,7 @@ ul.pageNav.bottom li:last-child a {
   z-index: 9998;
 }
 
-/* line 328, ../scss/main.scss */
+/* line 350, ../scss/main.scss */
 .popup {
   padding: 1em;
   width: 80%;
@@ -468,34 +488,34 @@ ul.pageNav.bottom li:last-child a {
   background: #eee;
 }
 
-/* line 339, ../scss/main.scss */
+/* line 361, ../scss/main.scss */
 .popupCloseLink {
   font-size: 0.75em;
 }
-/* line 342, ../scss/main.scss */
+/* line 364, ../scss/main.scss */
 .popupCloseLink:before {
   margin-top: 2em;
   content: '\a';
   display: block;
 }
 
-/* line 349, ../scss/main.scss */
+/* line 371, ../scss/main.scss */
 table {
   width: 100%;
 }
 
-/* line 357, ../scss/main.scss */
+/* line 379, ../scss/main.scss */
 a[target="_blank"]:after {
   content: " " url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKBAMAAAB/HNKOAAAAD1BMVEX///////////////////+Rd1MVAAAABHRSTlMAaeRqY+AomwAAADNJREFUeF4lxIEJACAMBLErdACRjuIAX/n9Z7IghEDYhlwkcGe7Z+Xac4cLnVKjkOCzLR6tNQaTLNDT1wAAAABJRU5ErkJggg==");
   white-space: pre;
 }
 
-/* line 363, ../scss/main.scss */
+/* line 385, ../scss/main.scss */
 a.sprite[target="_blank"]:after {
   display: none;
 }
 
-/* line 367, ../scss/main.scss */
+/* line 389, ../scss/main.scss */
 .login {
   width: 154px;
   height: 23px;
@@ -506,7 +526,7 @@ a.sprite[target="_blank"]:after {
   color: transparent;
 }
 
-/* line 377, ../scss/main.scss */
+/* line 399, ../scss/main.scss */
 .curse {
   font-weight: bold;
   -webkit-filter: blur(2px);
